# MLPipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
config/: __init__.py
config/datasets/: avocado.yaml  m5.yaml
data/: loader.py
data/raw/: avocado.csv.dvc
docker/: mlflow.Dockerfile
features/: pipeline.py
models/: evaluate.py  leaderboard.md  lightgbm_model.py  metrics.py  prophet_baseline.py  prophet_panel.py  run_comparison.py  tracking.py
tests/: test_lightgbm_integration.py  test_phase1.py  test_phase2.py  test_prophet_integration.py  test_smoke.py
