[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-forecasting-mlops"
version = "0.1.0"
description = "End-to-end demand/price forecasting platform with a production-grade MLOps wrapper."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "varun" }]

# Core runtime dependencies. Heavy model libs (TFT/pytorch-forecasting) and
# serving extras are split into optional groups so Phase 0 installs stay lean.
dependencies = [
    # Data & versioning
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<2.0",
    "pyarrow>=15.0",
    "dvc>=3.50,<4.0",
    # Tracking / registry
    "mlflow>=2.13,<3.0",
    # Feature engineering
    "holidays>=0.50",
    "scikit-learn>=1.5,<2.0",
    # Config
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Classical / tree models (Phase 1-2)
models = [
    "prophet>=1.1.5",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "optuna>=3.6",
]
# Deep model (Phase 4)
deep = [
    "torch>=2.2",
    "pytorch-forecasting>=1.0",
    "onnx>=1.16",
    "onnxruntime>=1.18",
]
# Serving (Phase 3)
serving = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]
# Monitoring + dashboard (Phase 5)
monitoring = [
    "evidently>=0.4.30",
    "streamlit>=1.36",
    "plotly>=5.22",
]
# Dev tooling
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "great-expectations>=0.18",
    "httpx>=0.27",
]

[tool.setuptools]
# Treat each top-level concern directory as a package.
packages = ["data", "features", "models", "serving", "monitoring", "dashboard", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "integration: marks tests that require external services (mlflow/postgres/model artifacts)",
]
